--- a/GUI/stylesheets/styles.css
+++ b/GUI/stylesheets/styles.css
@@ -4,12 +4,10 @@
 
 .logsright{
   margin: 0;
-  right: 0;
-  position: absolute;
+float: right;
 }
 
 .logsleft{
   margin: 0;
-  left: 0;
-  position: absolute;
+  float: left;
 }
