--- a/GUI/stylesheets/styles.css
+++ b/GUI/stylesheets/styles.css
@@ -1,9 +1,9 @@
 .wrapper{
-  background: rgba(255,255,255,.6);
+  background: rgba(0,0,0,.6);
 }
 
 body{
-  background: grey;
+  background: black;
 }
 
 .logsright{
