--- a/GUI/stylesheets/styles.css
+++ b/GUI/stylesheets/styles.css
@@ -22,4 +22,8 @@ html {
 h1{
   font-family: 'Comfortaa', cursive;
   font-size: 20px;
+  color: white;
+  -webkit-box-shadow: 0 10px 6px -6px #777;
+  -moz-box-shadow: 0 10px 6px -6px #777;
+  box-shadow: 0 10px 6px -6px #777;
 }
