--- a/GUI/stylesheets/styles.css
+++ b/GUI/stylesheets/styles.css
@@ -22,6 +22,7 @@ html {
 h1{
   font-family: 'Comfortaa', cursive;
   margin:auto;
+  text-align: center;
   font-size: 60px;
   color: white;
   text-shadow: 6px 6px 0px rgba(0,0,0,0.2);
