--- a/GUI/stylesheets/styles.css
+++ b/GUI/stylesheets/styles.css
@@ -1,29 +1,13 @@
-html {
-  height: 100%;
-  background:
-  linear-gradient(
-          limegreen,
-          transparent
-  ),
-  linear-gradient(
-          90deg,
-          skyblue,
-          transparent
-  ),
-  linear-gradient(
-          -90deg,
-          coral,
-          transparent
-  );
-
-  background-blend-mode: screen;
+body {
+  background: #222;
 }
+
 
 h1{
   font-family: 'Comfortaa', cursive;
   margin:auto;
   text-align: center;
   font-size: 60px;
-  color: white;
-  text-shadow: 6px 6px 0px rgba(0,0,0,0.2);
+  color: rgba(0,0,0,0.6);
+  text-shadow: 2px 2px 3px rgba(255,255,255,0.1);
 }
