--- a/GUI/stylesheets/styles.css
+++ b/GUI/stylesheets/styles.css
@@ -4,7 +4,7 @@ body{
 
 h1{
   font-family: 'Comfortaa', cursive;
-  margin:auto;
-  text-align: center;
+  margin:40px;
+  text-align: left;
   font-size: 60px;
 }
