--- a/GUI/stylesheets/styles.css
+++ b/GUI/stylesheets/styles.css
@@ -18,7 +18,8 @@ h1 {
     0 10px 10px rgba(0,0,0,.2),
     0 20px 20px rgba(0,0,0,.15);
     font-size: 8em;
-    margin-bottom:0;
+    margin-top: 0px;
+    margin-left: 20px;
 }
 h2{
     text-shadow: 0 -2px 0 #ccc,
