--- a/GUI/stylesheets/styles.css
+++ b/GUI/stylesheets/styles.css
@@ -17,7 +17,7 @@ h1 {
     0 5px 10px rgba(0,0,0,.25),
     0 10px 10px rgba(0,0,0,.2),
     0 20px 20px rgba(0,0,0,.15);
-    font-size: 8em;
+    font-size: 60px;
     margin-top: 0px;
     margin-left: 20px;
 }
