--- a/GUI/stylesheets/styles.css
+++ b/GUI/stylesheets/styles.css
@@ -1,5 +1,12 @@
-body{
-    background: white;
+html, body {
+    min-height: 100%;
+}
+body {
+    background: #92c7d6;
+    background-image: -webkit-radial-gradient(top, circle cover, #97d0e1, #427388 80%);
+    background-image: -moz-radial-gradient(top, circle cover, #97d0e1, #427388 80%);
+    background-image: -o-radial-gradient(top, circle cover, #97d0e1, #427388 80%);
+    background-image: radial-gradient(top, circle cover, #97d0e1, #427388 80%);
 }
 
 h1,h2{ color:#fff; font-family: sans-serif;   text-transform: uppercase;}
