--- a/GUI/stylesheets/styles.css
+++ b/GUI/stylesheets/styles.css
@@ -1,12 +1,25 @@
+/*html, body {*/
+    /*min-height: 100%;*/
+/*}*/
+/*body {*/
+    /*background: #92c7d6;*/
+    /*background-image: -webkit-radial-gradient(top, circle cover, #97d0e1, #427388 80%);*/
+    /*background-image: -moz-radial-gradient(top, circle cover, #97d0e1, #427388 80%);*/
+    /*background-image: -o-radial-gradient(top, circle cover, #97d0e1, #427388 80%);*/
+    /*background-image: radial-gradient(top, circle cover, #97d0e1, #427388 80%);*/
+/*}*/
+
 html, body {
     min-height: 100%;
 }
+
 body {
-    background: #92c7d6;
-    background-image: -webkit-radial-gradient(top, circle cover, #97d0e1, #427388 80%);
-    background-image: -moz-radial-gradient(top, circle cover, #97d0e1, #427388 80%);
-    background-image: -o-radial-gradient(top, circle cover, #97d0e1, #427388 80%);
-    background-image: radial-gradient(top, circle cover, #97d0e1, #427388 80%);
+    color: #404040;
+    background: #282537;
+    background-image: -webkit-radial-gradient(top, circle cover, #3c3b52 0%, #252233 80%);
+    background-image: -moz-radial-gradient(top, circle cover, #3c3b52 0%, #252233 80%);
+    background-image: -o-radial-gradient(top, circle cover, #3c3b52 0%, #252233 80%);
+    background-image: radial-gradient(top, circle cover, #3c3b52 0%, #252233 80%);
 }
 
 h1,h2{ color:#fff; font-family: sans-serif;   text-transform: uppercase;}
@@ -36,3 +49,4 @@ h2{
 [center]{
     text-align: center;
 }
+
