--- a/GUI/stylesheets/styles.css
+++ b/GUI/stylesheets/styles.css
@@ -47,7 +47,7 @@ h2{
     -webkit-animation: breathing 7s ease-out infinite normal;
     animation: breathing 7s ease-out infinite normal;
     font-size: 24px;
-    background: #5885cb;
+    background: #ffffff;
     color: #fff;
     -webkit-font-smoothing: antialiased;
     border-radius: 3px;
@@ -110,7 +110,7 @@ h2{
     -webkit-animation: breathing 7s ease-out infinite normal;
     animation: breathing 7s ease-out infinite normal;
     font-size: 24px;
-    background: #5885cb;
+    background: #fff;
     color: #fff;
     -webkit-font-smoothing: antialiased;
     border-radius: 3px;
