--- a/GUI/stylesheets/styles.css
+++ b/GUI/stylesheets/styles.css
@@ -111,7 +111,7 @@ h2{
     animation: breathing 7s ease-out infinite normal;
     font-size: 24px;
     background: #fff;
-    color: #fff;
+    color: #8c8c8c;
     -webkit-font-smoothing: antialiased;
     border-radius: 3px;
     text-align: center;
