--- a/GUI/stylesheets/styles.css
+++ b/GUI/stylesheets/styles.css
@@ -110,7 +110,7 @@ h2{
     -webkit-animation: breathing 7s ease-out infinite normal;
     animation: breathing 7s ease-out infinite normal;
     font-size: 24px;
-    background: #fff;
+    background: rgba(0,0,0,0);
     color: #838383;
     -webkit-font-smoothing: antialiased;
     border-radius: 3px;
