--- a/GUI/stylesheets/styles.css
+++ b/GUI/stylesheets/styles.css
@@ -111,7 +111,7 @@ h2{
     animation: breathing 7s ease-out infinite normal;
     font-size: 24px;
     background: rgba(0,0,0,0);
-    color: #838383;
+    color: #ffffff;
     -webkit-font-smoothing: antialiased;
     border-radius: 3px;
     text-align: center;
