--- a/GUI/stylesheets/styles.css
+++ b/GUI/stylesheets/styles.css
@@ -41,6 +41,7 @@ h2{
 
 #breathing-button {
     width: 270px;
+    height: 50px;
     padding: 20px;
     margin: 50px auto;
     border: 1px solid #d1d1d1;
