--- a/GUI/stylesheets/styles.css
+++ b/GUI/stylesheets/styles.css
@@ -51,6 +51,8 @@ h2{
     transition: background 0.56s;
     -webkit-transition: margin-top 0.56s;
     transition: margin-top 0.56s;
+    margin-top: 300px;
+    margin-left: 275px;
 
 }
 
